# "dox/ChangeLog"
#	$Id: ChangeLog,v 1.23 2007/08/20 21:12:28 fang Exp $

2007-08-20	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-59:
	  prsim documentation added, just describes usage and commands.


2007-08-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-58:
	  Migrated HAC language dox to texinfo, old ones still retained.
		Very minimal modifications in port.  


2007-08-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-54:
	  Moved cast2hac docs to Texinfo.


2007-08-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-52:
	  chpsim/usage.texi: disambiguate file clashes from case-insensitivity
	  Makefile.am: installcheck the .info file, using init_hack.sh


	* HACKT-00-01-04-main-00-81-50:
	  Make.dox-head: provide script to cd $(srcdir) and extract texinfo
		documentation in the $(srcdir) of documentation, 
		no longer in $(builddir) because distribution needs 
		auto-generated .texi files to suppress rebuild of .info, 
		which is distributed by default.  Crucial for
		distcheck, which uses non-writable $(srcdir).  
		Mostly affects chpsim/Makefile.am, will be applicable to others.
		Also had to dist-hook-touch subdir files to maintain
		dependency-ordered timestamps so user need not regenerate
		info files. 


2007-08-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-46-chpsim-07-08:
	  chpsim/: documented standard library usage, other feedback fixes.


2007-08-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-46-chpsim-07-06:
	  chpsim/: Now extract documentation from module library functions
		in lib/libchpfn/*.cc, included by stdchpfn.texi.
	  mk/scantexdepend.awk: reject strings that cannot be file names,
		because they contain special shell characters


2007-08-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-46-chpsim-07-05: