@@ -6,6 +6,10 @@
 2007-08-20	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-81-59:
+	  No source revision, PRS/SPEC documentaiton only (dox/ChangeLog).
+
+
+	* HACKT-00-01-04-main-00-81-59:
 	  No source revision, prsim documentaiton only (dox/ChangeLog).
 
 
