@@ -1,7 +1,12 @@
 # "dox/ChangeLog"
-#	$Id: ChangeLog,v 1.23 2007/08/20 21:12:28 fang Exp $
+#	$Id: ChangeLog,v 1.24 2007/08/21 00:50:34 fang Exp $
 
 2007-08-20	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81-60:
+	  PRS macro and spec directives' documentation for hac.texi
+		now extracted from source.  
+
 
 	* HACKT-00-01-04-main-00-81-59:
 	  prsim documentation added, just describes usage and commands.
